--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
             </div>
             <button class="w-1/2 h-fit bg-[#184D47] text-white text-xl py-2">
-                Lihat Koleksi
+                LIHAT KOLEKSI
             </button>
         </div>
         <div class="picture-item">
