sumber-bunyi page done, on progress mobile

--- a/gallery.html
+++ b/gallery.html
@@ -32,9 +32,9 @@
                     boxShadow: {
                         'mia-style': '0px 0px 29px 10px #D7A84C'
                     },
-                    width: {
-                        'column-4': '22'
-                    }
+                    // width: {
+                    //     'column-4': '22'
+                    // }
                 }
             }
         }
@@ -195,6 +195,7 @@
     </div>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/select-box.js"></script>
 </body>
 
 </html>
