update mobile version

--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -37,7 +37,7 @@
         <nav class="h-full flex justify-between items-center mx-8 md:mx-12">
             <!-- Back Navigation -->
             <div>
-                <i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i>
+                <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
             </div>
             <!-- Logo -->
             <div>
