--- a/index.html
+++ b/index.html
@@ -15,39 +15,187 @@
     />
     <!-- Independent CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <!-- SelectBox CSS Mia Style -->
+    <link rel="stylesheet" href="./assets/css/select-mia-style.css">
+
+    <!-- Tailwind Config -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'emas-keraton': '#D7A84C',
+                        'hijau-keraton': '#184D47',
+                        'hijau-keraton-muda': '#758B76'
+                    },
+                    boxShadow: {
+                        'mia-style': '0px 0px 29px 10px #D7A84C'
+                    },
+                    // width: {
+                    //     'column-4': '22'
+                    // }
+                }
+            }
+        }
+    </script>
+
+    <style type="text/tailwindcss">
+        @layer utilities { .column-5{ width: 18.4%; margin-bottom: 2% } .column-4{ width: 22%; margin-bottom: 3%; } .column-3{ width: 30%; margin-bottom: 4%; } .column-2{ width: 45%; margin-bottom: 8%; } .column-1{ width: 100%; margin-bottom: 10%; } .picture-style{
+        width: theme('width.full'); height: theme('height.auto'); object-fit: cover; border-radius: theme('borderRadius.lg'); border-width: theme('borderWidth.4'); border-color: theme('colors.emas-keraton'); cursor: pointer; } }
+    </style>
 </head>
 
-<body class="h-screen flex flex-col">
-    <header class="w-screen h-16">
-        <nav class="h-full flex justify-between items-center mx-12">
+<body class="h-screen flex flex-col relative">
+    <header class="w-full h-24 p-2 border">
+        <nav class="h-full flex justify-between items-center mx-4 md:mx-12 gap-4">
             <!-- Back Navigation -->
             <div>
-                <i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i>
+                <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
             </div>
             <!-- Logo -->
-            <div>
+            <!-- <div>
                 <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12">
+            </div> -->
+            <div class="flex gap-4 grow md:grow-0 justify-between md:justify-start">
+                <div class="w-1/2 md:w-80 flex border-b border-hijau-keraton items-center m-2 px-2">
+                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton-muda search-bar" placeholder="Apa Cari Kak?">
+                    <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
+                </div>
+
+                <!-- Select Box -->
+                <div class="grow select_wrap md:w-80 h-full relative border">
+                    <ul class="default_option bg-hijau-keraton relative cursor-pointer text-white">
+                        <li class="p-2">
+                            <div class="option">
+                                <p class="tracking-widest w-[90%] md:w-auto">semua gamelan</p>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <ul class="select_ul absolute left-0 top-10 border w-full hidden z-40 bg-white">
+                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                            <div class="option all">
+                                <p class="tracking-widest">semua gamelan</p>
+                            </div>
+                        </li>
+                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                            <div class="option hageng">
+                                <p class="tracking-widest">hageng</p>
+                            </div>
+                        </li>
+                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                            <div class="option pakurmatan">
+                                <p class="tracking-widest">pakurmatan</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <!-- End Select Box -->
             </div>
         </nav>
     </header>
 
-    <main class="grow grid grid-cols-2">
-        <div class="description-item flex flex-col justify-center py-12 px-20">
-            <h1 class="text-6xl font-bold item-title mb-8 leading-[4rem]">KANJENG KYAHI SURAK</h1>
-            <p class="item-description text-justify text-2xl leading-9 mb-8">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio atque modi dolorum eius odio obcaecati animi nam natus velit perspiciatis reiciendis totam aut eos itaque beatae deserunt, aliquam at nemo.
-            </p>
-            <div class="grow">
-                <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
+    <main class="grow w-full px-12 overflow-y-scroll">
+        <div class="grid w-full py-12">
+            <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4"></div>
+            <div class="gutter-sizer w-[0%] sm:w-[10%] md:w-[5%] lg:w-[4%]"></div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
             </div>
-            <button class="w-1/2 h-fit bg-[#184D47] text-white text-xl py-2">
-                LIHAT KOLEKSI
-            </button>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-panjang.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-panjang.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
+                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
+                <div class="item-description absolute w-full bottom-0 hidden">
+                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
+                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="picture-item">
-            <img src="./assets/img/gamelan-1.jpg" alt="item-picture" class="w-[70%] h-full object-cover">
-        </div>
+
     </main>
+
+    <div class="absolute bottom-5 bg-transparent flex justify-center w-full">
+        <ul class="bg-white flex">
+            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton"><i class="fa-solid fa-angle-left"></i></li>
+            <li class="bg-emas-keraton px-3 py-2 border border-emas-keraton">1</li>
+            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton">2</li>
+            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton">3</li>
+            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton"><i class="fa-solid fa-angle-right"></i></li>
+        </ul>
+    </div>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/select-box.js"></script>
 </body>
 
 </html>
