--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
                 <div class="grow select_wrap md:w-80 h-full relative border">
                     <ul class="default_option bg-hijau-keraton relative cursor-pointer text-white">
                         <li class="p-2">
-                            <div class="option">
+                            <div class="default_option">
                                 <p class="tracking-widest w-[90%] md:w-auto">semua gamelan</p>
                             </div>
                         </li>
                     </ul>
 
                     <ul class="select_ul absolute left-0 top-10 border w-full hidden z-40 bg-white">
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
                             <div class="option all">
                                 <p class="tracking-widest">semua gamelan</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
                             <div class="option hageng">
                                 <p class="tracking-widest">hageng</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">pakurmatan</p>
                             </div>
@@ -97,105 +97,29 @@
     </header>
 
     <main class="grow w-full px-12 overflow-y-scroll">
-        <div class="grid w-full py-12">
+        <div class="grid w-full py-12 gallery-container">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4"></div>
             <div class="gutter-sizer w-[0%] sm:w-[10%] md:w-[5%] lg:w-[4%]"></div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-panjang.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-panjang.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-2.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item relative column-1 sm:column-2 md:column-3 lg:column-4">
-                <img src="./assets/img/gamelan-1.jpg" alt="gallery-item" class="picture-style">
-                <div class="item-description absolute w-full bottom-0 hidden">
-                    <div class="bg-emas-keraton text-white font-bold h-full py-2 rounded-b-lg">
-                        <h1 class="text-lg tracking-widest text-center">KANJENG KYAHI SURAK</h1>
-                    </div>
-                </div>
-            </div>
+
+
         </div>
 
     </main>
 
-    <div class="absolute bottom-5 bg-transparent flex justify-center w-full">
-        <ul class="bg-white flex">
-            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton"><i class="fa-solid fa-angle-left"></i></li>
-            <li class="bg-emas-keraton px-3 py-2 border border-emas-keraton">1</li>
-            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton">2</li>
-            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton">3</li>
-            <li class=" px-3 py-2 border border-emas-keraton hover:bg-emas-keraton"><i class="fa-solid fa-angle-right"></i></li>
-        </ul>
-    </div>
+    <footer class="absolute bottom-5 bg-transparent flex justify-center w-full pagination-container">
+        <!-- <ul class="bg-white flex">
+            <li class="px-3 py-2"><i class="fa-solid fa-angle-left"></i></li>
+            <li class="px-3 py-2 active">1</li>
+            <li class="px-3 py-2">2</li>
+            <li class="px-3 py-2">3</li>
+            <li class="px-3 py-2"><i class="fa-solid fa-angle-right"></i></li>
+        </ul> -->
+    </footer>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-    <script src="./assets/js/index.js"></script>
     <script src="./assets/js/select-box.js"></script>
+    <script src="./assets/js/pagination.js"></script>
+    <script src="./assets/js/index.js"></script>
+
 </body>
 
 </html>
