--- a/details-collection.html
+++ b/details-collection.html
@@ -31,16 +31,16 @@
         </nav>
     </header>
 
-    <main class="grow flex flex-col-reverse md:flex-row px-8 md:px-20 md:gap-8 pb-8 md:pb-0">
-        <div class="description-item w-full flex flex-col justify-center md:py-12">
-            <h1 class="text-4xl md:text-6xl font-bold item-title mt-4 md:mt-0 mb-0 md:mb-8 leading-[4rem]">KANJENG KYAHI SURAK</h1>
-            <p class="item-description text-justify text-xl md:text-2xl leading-9 mb-4 md:mb-8">
+    <main class="grow flex flex-col-reverse md:flex-row px-0 md:px-20 md:gap-8 pb-8 md:pb-0">
+        <div class="description-item w-full flex flex-col justify-center px-8 md:py-12">
+            <h1 class="text-4xl md:text-6xl font-bold item-title mt-4 md:mt-0 mb-4 md:mb-8 md:leading-[4rem]">KANJENG KYAHI SURAK</h1>
+            <p class="item-description text-justify text-lg md:text-2xl md:leading-9 mb-4 md:mb-8">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio atque modi dolorum eius odio obcaecati animi nam natus velit perspiciatis reiciendis totam aut eos itaque beatae deserunt, aliquam at nemo.
             </p>
-            <div class="grow my-4 md:my-0">
+            <div class="grow my-4 md:my-0 cursor-pointer">
                 <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
             </div>
-            <button class="w-1/2 h-fit bg-[#184D47] text-white text-xl py-2 tracking-widest">
+            <button class="w-1/2 h-fit bg-[#184D47] text-white text-md md:text-xl py-2 tracking-widest">
                 <a href="./sumber-bunyi.html">LIHAT KOLEKSI</a>
             </button>
         </div>
