--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 </head>
 
 <body class="h-screen flex flex-col relative">
+    <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden">
+        <div class="flex w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
+            <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
+            <h2 class="text-center text-xl font-semibold">Sedang memuat ...</h2>
+            <p class="text-center">Wong sabar rejekine jembar, Ngalah urip luwih berkah</p>
+        </div>
+
+    </div>
     <header class="w-full h-24 p-2 border">
         <nav class="h-full flex justify-between items-center mx-4 md:mx-12 gap-4">
             <!-- Back Navigation -->
