add mobile navbar

--- a/details-collection.html
+++ b/details-collection.html
@@ -18,21 +18,21 @@
 </head>
 
 <body class="h-screen flex flex-col">
-    <header class="w-full h-16 mb-4">
-        <nav class="h-full flex justify-between items-center mx-8 md:mx-12 py-2">
+    <header class="w-full h-24 py-4">
+        <nav class="h-full flex justify-between items-center mx-8 lg:mx-12 gap-4">
             <!-- Back Navigation -->
             <div>
                 <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
             </div>
             <!-- Logo -->
-            <div>
+            <div class="cursor-pointer">
                 <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12">
             </div>
         </nav>
     </header>
 
     <main class="grow flex flex-col-reverse md:flex-row px-0 md:px-20 md:gap-8 pb-8 md:pb-0">
-        <div class="description-item w-full flex flex-col justify-center px-8 md:py-12">
+        <div class="description-item w-full flex flex-col justify-center px-8 lg:px-12 md:py-12">
             <h1 class="text-4xl md:text-6xl font-bold item-title mt-4 md:mt-0 mb-4 md:mb-8 md:leading-[4rem]">KANJENG KYAHI SURAK</h1>
             <p class="item-description text-justify text-lg md:text-2xl md:leading-9 mb-4 md:mb-8">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio atque modi dolorum eius odio obcaecati animi nam natus velit perspiciatis reiciendis totam aut eos itaque beatae deserunt, aliquam at nemo.
