--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -33,14 +33,14 @@
 </head>
 
 <body class="w-full md:h-screen flex flex-col">
-    <header class="w-full h-16">
-        <nav class="h-full flex justify-between items-center mx-8 md:mx-12">
+    <header class="w-full h-24 py-4">
+        <nav class="h-full flex justify-between items-center mx-8 lg:mx-12">
             <!-- Back Navigation -->
             <div>
                 <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
             </div>
             <!-- Logo -->
-            <div>
+            <div class="cursor-pointer">
                 <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12">
             </div>
         </nav>
@@ -99,9 +99,9 @@
             <!-- End Select Box -->
         </div>
         <div class="w-full h-full md:flex md:flex-row-reverse md:items-center md:gap-4 grow md:overflow-y-hidden">
-            <div class="w-full md:w-1/3 h-fit md:h-5/6 border border-black p-3.5 text-justify mb-4 md:mb-0 bg-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, delectus ab, sequi eum rem perferendis libero hic, esse reprehenderit dolorem quaerat inventore saepe voluptatum explicabo facere. Tempore distinctio quibusdam excepturi!</div>
+            <div class="w-full md:w-1/3 h-fit md:h-5/6 border border-black p-3.5 text-justify mb-4 md:mb-0 bg-white rounded-lg md:rounded-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, delectus ab, sequi eum rem perferendis libero hic, esse reprehenderit dolorem quaerat inventore saepe voluptatum explicabo facere. Tempore distinctio quibusdam excepturi!</div>
 
-            <div class="w-full bg-white h-full flex p-4 border border-black">
+            <div class="w-full bg-white h-full flex p-4 border border-black rounded-lg md:rounded-none">
                 <div class="my-4 md:my-0 cursor-pointer">
                     <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
                 </div>
