--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     </script>
 
     <style type="text/tailwindcss">
-        @layer utilities { .column-5{ width: 18.4%; margin-bottom: 2% } .column-4{ width: 22%; margin-bottom: 3%; } .column-3{ width: 30%; margin-bottom: 4%; } .column-2{ width: 45%; margin-bottom: 8%; } .column-1{ width: 100%; margin-bottom: 10%; } .picture-style{
-        width: theme('width.full'); height: theme('height.auto'); object-fit: cover; border-radius: theme('borderRadius.lg'); border-width: theme('borderWidth.4'); border-color: theme('colors.emas-keraton'); cursor: pointer; } }
+        @layer utilities { .column-5{ width: 18.4%; margin-bottom: 2% } .column-4{ width: 22%; margin-bottom: 3%; } .column-3{ width: 31.33%; margin-bottom: 2%; } .column-2{ width: 47.5%; margin-bottom: 6%; } .column-1{ width: 100%; margin-bottom: 8%; } .picture-style{
+        width: theme('width.full'); height: theme('height.auto'); object-fit: cover; border-radius: theme('borderRadius.lg'); border-width: theme('borderWidth.4'); border-color: theme('colors.emas-keraton'); cursor: pointer; transition-timing-function:
+        cubic-bezier(0.4, 0, 0.2, 1); transition-duration: 200ms; } }
     </style>
 </head>
 
@@ -50,22 +51,58 @@
     <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden">
         <div class="flex w-5/6 md:w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
-            <h2 class="text-center text-xl font-semibold">Sedang memuat ...</h2>
+            <h2 class="text-center text-xl font-semibold">Sedang memuat gambare biar apik...</h2>
             <p class="text-center">Wong sabar rejekine jembar, Ngalah urip luwih berkah</p>
         </div>
-
     </div>
-    <header class="w-full h-24 p-2 border">
-        <nav class="h-full flex justify-between items-center mx-4 md:mx-12 gap-4">
+
+    <div class="w-full h-full absolute z-40 flex items-start justify-end bg-black bg-opacity-75 p-8 invisible md:hidden nav-mobile transition ease-in-out delay-150">
+        <div class="border w-full h-full p-4 rounded-lg bg-white flex flex-col">
+            <div class="header-nav-mobile flex items-center justify-between mb-8 border-b border-black border-opacity-10">
+                <h1 class="text-2xl font-bold">Cari Koleksi</h1>
+                <span class="text-3xl cursor-pointer close-nav">
+                    <i class="fa-solid fa-xmark"></i>
+                </span>
+            </div>
+            <div class="body-nav-mobile flex flex-col relative grow">
+                <h1 class="font-md">Pencarian Koleksi</h1>
+                <div class="w-full flex border-b border-hijau-keraton items-center mb-4">
+                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton-muda search-bar" placeholder="Apa Cari Kak?">
+                    <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
+                </div>
+
+                <h1 class="font-md">Jenis Koleksi :</h1>
+                <ul>
+                    <li>
+                        <input type="checkbox" name="" id="" class="mr-2">Semua Gamelan
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="" class="mr-2">Gamelan Hageng
+                    </li>
+                    <li>
+                        <input type="checkbox" name="" id="" class="mr-2">Gamelan Pakurmatan
+                    </li>
+                </ul>
+
+                <button class="btn-apply bg-hijau-keraton absolute bottom-0 p-2 w-full text-white rounded-lg">Terapkan</button>
+            </div>
+        </div>
+    </div>
+
+    <header class="w-full h-24 py-4">
+        <nav class="h-full flex justify-between items-center mx-8 lg:mx-12 gap-4">
             <!-- Back Navigation -->
-            <div>
+            <div class="w-full md:w-fit flex justify-between">
                 <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
+                <span class="text-3xl cursor-pointer block md:hidden open-nav">
+                    <i id="menu" class="fa fa-bars"></i>
+                </span>
             </div>
             <!-- Logo -->
             <!-- <div>
                 <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12">
             </div> -->
-            <div class="flex gap-4 grow md:grow-0 justify-between md:justify-start">
+            <div class="hidden md:flex md:gap-4 grow md:grow-0 justify-between md:justify-start ">
                 <div class="w-1/2 md:w-80 flex border-b border-hijau-keraton items-center m-2 px-2">
                     <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton-muda search-bar" placeholder="Apa Cari Kak?">
                     <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
@@ -104,12 +141,10 @@
         </nav>
     </header>
 
-    <main class="grow w-full px-12 overflow-y-scroll">
+    <main class="grow w-full px-8 lg:px-12 overflow-y-scroll">
         <div class="grid w-full py-12 gallery-container">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4"></div>
-            <div class="gutter-sizer w-[0%] sm:w-[10%] md:w-[5%] lg:w-[4%]"></div>
-
-
+            <div class="gutter-sizer w-[0%] sm:w-[5%] md:w-[3%] lg:w-[4%]"></div>
         </div>
 
     </main>
