test mobile view

--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -34,7 +34,7 @@
 
 <body class="w-full md:h-screen flex flex-col">
     <header class="w-full h-24 py-4">
-        <nav class="h-full flex justify-between items-center mx-8 lg:mx-12">
+        <nav class="h-full flex justify-between items-center mx-4 lg:mx-8">
             <!-- Back Navigation -->
             <div>
                 <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
@@ -46,7 +46,7 @@
         </nav>
     </header>
 
-    <main class="w-full h-full grow px-8 md:px-36 pb-8 md:pb-16 flex flex-col md:overflow-y-hidden">
+    <main class="w-full h-full grow px-4 md:px-24 pb-8 md:pb-16 flex flex-col md:overflow-y-hidden">
         <div class="item-information flex items-center gap-4 mb-8 h-fit">
             <div class="w-full md:w-fit md:max-w-2/4 p-1">
                 <h1 class="text-4xl md:text-6xl font-bold item-title leading-[4rem]">GONG</h1>
@@ -116,11 +116,11 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
@@ -143,11 +143,11 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
@@ -170,11 +170,11 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
@@ -197,11 +197,11 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
@@ -223,38 +223,11 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
-                                    <h1 class="font-bold">Kualitas Bahan</h1>
-                                    <p>Bagus</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
-                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
-                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
-                                repudiandae pariatur ea. Lorem ipsum dolor,
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
-                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
-                            <div class="grow flex justify-between">
-                                <div class="bentuk w-full">
-                                    <h1 class="font-bold">Bentuk</h1>
-                                    <p>Pencu</p>
-                                </div>
-                                <div class="bahan w-full">
-                                    <h1 class="font-bold">Bahan</h1>
-                                    <p>Perunggu</p>
-                                </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
@@ -277,11 +250,38 @@
                                     <h1 class="font-bold">Bentuk</h1>
                                     <p>Pencu</p>
                                 </div>
-                                <div class="bahan w-full">
+                                <div class="bahan w-full hidden md:block">
                                     <h1 class="font-bold">Bahan</h1>
                                     <p>Perunggu</p>
                                 </div>
-                                <div class="kualitas w-full">
+                                <div class="kualitas w-full hidden md:block">
+                                    <h1 class="font-bold">Kualitas Bahan</h1>
+                                    <p>Bagus</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
+                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
+                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
+                                repudiandae pariatur ea. Lorem ipsum dolor,
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
+                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="grow flex justify-between">
+                                <div class="bentuk w-full">
+                                    <h1 class="font-bold">Bentuk</h1>
+                                    <p>Pencu</p>
+                                </div>
+                                <div class="bahan w-full hidden md:block">
+                                    <h1 class="font-bold">Bahan</h1>
+                                    <p>Perunggu</p>
+                                </div>
+                                <div class="kualitas w-full hidden md:block">
                                     <h1 class="font-bold">Kualitas Bahan</h1>
                                     <p>Bagus</p>
                                 </div>
