--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -24,7 +24,7 @@
                     colors: {
                         'emas-keraton': '#D7A84C',
                         'hijau-keraton': '#184D47',
-                        'hijau-keraton-muda': '#758B76'
+                        'hijau-keraton-muda': '#87B689'
                     },
                 }
             }
@@ -46,9 +46,9 @@
         </nav>
     </header>
 
-    <main class="w-full h-full grow px-4 md:px-24 pb-8 md:pb-16 flex flex-col md:overflow-y-hidden">
-        <div class="item-information flex items-center gap-4 mb-8 h-fit">
-            <div class="w-full md:w-fit md:max-w-2/4 p-1">
+    <main class="w-full h-full grow px-4 lg:pl-24 lg:pr-8 pb-4 md:pb-12 flex flex-col md:overflow-y-hidden">
+        <div class="item-information flex flex-col md:flex-row items-center md:gap-4 mb-8 h-fit">
+            <div class="w-full basis-full md:basis-auto md:w-fit md:max-w-2/4 p-1">
                 <h1 class="text-4xl md:text-6xl font-bold item-title leading-[4rem]">GONG</h1>
             </div>
             <!-- Select Box -->
@@ -63,32 +63,32 @@
                     </ul>
 
                     <ul class="select_ul absolute left-0 top-10 border w-full hidden z-40 bg-white">
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option all">
                                 <p class="tracking-widest">informasi umum</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option hageng">
                                 <p class="tracking-widest">rancak</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">sumber bunyi</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">elemen pendukung</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">keunikan</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda">
+                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">catatan</p>
                             </div>
@@ -99,16 +99,16 @@
             <!-- End Select Box -->
         </div>
         <div class="w-full h-full md:flex md:flex-row-reverse md:items-center md:gap-4 grow md:overflow-y-hidden">
-            <div class="w-full md:w-1/3 h-fit md:h-5/6 border border-black p-3.5 text-justify mb-4 md:mb-0 bg-white rounded-lg md:rounded-none">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, delectus ab, sequi eum rem perferendis libero hic, esse reprehenderit dolorem quaerat inventore saepe voluptatum explicabo facere. Tempore distinctio quibusdam excepturi!</div>
+            <div class="w-full md:w-1/3 h-fit md:h-5/6 p-3.5 md:p-6 text-justify mb-4 md:mb-0 bg-white rounded-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, delectus ab, sequi eum rem perferendis libero hic, esse reprehenderit dolorem quaerat inventore saepe voluptatum explicabo facere. Tempore distinctio quibusdam excepturi!</div>
 
-            <div class="w-full bg-white h-full flex p-4 border border-black rounded-lg md:rounded-none">
-                <div class="my-4 md:my-0 cursor-pointer">
+            <div class="w-full md:w-2/3 bg-white h-full flex p-3.5 md:p-6 rounded-lg">
+                <div class="my-4 md:my-0 cursor-pointer hidden md:block">
                     <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
                 </div>
 
                 <div class="accordion__wrapper w-full md:w-2/3 h-96 md:h-full max-h-full overflow-y-scroll p-2 grow">
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -162,7 +162,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -189,7 +189,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -215,34 +215,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
-                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
-                            <div class="grow flex justify-between">
-                                <div class="bentuk w-full">
-                                    <h1 class="font-bold">Bentuk</h1>
-                                    <p>Pencu</p>
-                                </div>
-                                <div class="bahan w-full hidden md:block">
-                                    <h1 class="font-bold">Bahan</h1>
-                                    <p>Perunggu</p>
-                                </div>
-                                <div class="kualitas w-full hidden md:block">
-                                    <h1 class="font-bold">Kualitas Bahan</h1>
-                                    <p>Bagus</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
-                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
-                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
-                                repudiandae pariatur ea. Lorem ipsum dolor,
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -269,7 +242,34 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
+                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="grow flex justify-between">
+                                <div class="bentuk w-full">
+                                    <h1 class="font-bold">Bentuk</h1>
+                                    <p>Pencu</p>
+                                </div>
+                                <div class="bahan w-full hidden md:block">
+                                    <h1 class="font-bold">Bahan</h1>
+                                    <p>Perunggu</p>
+                                </div>
+                                <div class="kualitas w-full hidden md:block">
+                                    <h1 class="font-bold">Kualitas Bahan</h1>
+                                    <p>Bagus</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
+                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
+                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
+                                repudiandae pariatur ea. Lorem ipsum dolor,
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
